--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=seminar1
 
-server.port = 9090
+server.port = 8080
+server.address=0.0.0.0
 
 logging.level.org.springframework.web.servlet=DEBUG
